# claude-history-search

./: .gitignore  Cargo.toml  README.md  README_CN.md  main.py  pyproject.toml
claude_his_search/: app.py  config.py  embedding_engine.py  history_parser.py
qt/: AppIcon.icns  CMakeLists.txt  chatwidget.h  engine.cpp  engine.h  main.cpp  mainwindow.cpp  mainwindow.h  parser.cpp  parser.h  sessiondelegate.h  types.h
src/: app.rs  claude.rs  config.rs  engine.rs  main.rs  parser.rs  qwen3.rs
