[package]
name = "claude-his-search"
version = "0.3.0"
edition = "2021"
description = "Claude Code 对话历史搜索与语义召回 (Rust + Metal)"

[dependencies]
eframe = "0.31"
egui_extras = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
bincode = "1.3"
dirs = "6"
anyhow = "1"
arboard = "3"
candle-core = { version = "0.8", features = ["metal"] }
candle-nn = "0.8"
tokenizers = "0.21"
hf-hub = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
